# uniquep

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: test.yml
src/: cidian_zhzh-kfcd-2021714-ipa.csv  cidian_zhzh-kfcd-2021714-no-notation-ipa.csv  cidian_zhzh-kfcd-2021714-notune-ipa.csv  cidian_zhzh-kfcd-2021714.csv  cidian_zhzh-kfcd-2021714.txt  dict_revised_2015_20211228-rawdata.csv  dict_revised_2015_20211228.csv  main.py  uniquep-cidian_zhzh-kfcd-2021714-notune-ipa.csv
test/: Lexique-query-fr-rawdata.csv  Lexique-query-fr-test.csv  README.md  preprocess.py  test_uniquep_fr.py  uniquep-Lexique-query-fr-test.csv
