[tool.poetry]
name = "uniquep"
version = "1.0.0"
authors = ["tingwei628"]
description = ""
packages = [
    # { include = "src"}
]


[tool.poetry.dependencies]
python = "^3.8"
dragonmapper = "^0.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
