[tool.poetry]
name = "uniquep"
version = "1.0.0"
authors = ["tingwei628"]
description = ""
packages = [
    { include = "src"}
]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
